# i2c_puppet

./: KERNEL_AND_APP_PLAN.md  README.md  RELEASE_NOTES.md  build_backlight_fw.sh
.github/workflows/: build.yml
app/: CMakeLists.txt  backlight.c  backlight.h  fifo.c  gpioexp.c  keyboard.c  keyboard.h  main.c  reg.c  touchpad.c  usb.c
